--- a/.github/workflows/azuresqldatabase.yml
+++ b/.github/workflows/azuresqldatabase.yml
@@ -20,4 +20,5 @@ jobs:
         with:
           connection-string: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
           # uses dacpac to deploy database schema
-          dacpac-package: './database/dacpac/bus-db.dacpac'
+          path: './database/dacpac/bus-db.dacpac'
+          action: 'Publish'
